# kin-vfs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  cloudbuild.yaml  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  kin-dependency-wave.yml  registry-publish.yml  registry-smoke.yml  release.yml  sast.yml
.kin-release/: downstreams.json
crates/kin-vfs-cli/: Cargo.toml
crates/kin-vfs-cli/src/: main.rs
crates/kin-vfs-core/: Cargo.toml
crates/kin-vfs-core/src/: cache.rs  canary.rs  error.rs  lib.rs  pathmap.rs  protocol.rs  provider.rs  stat.rs  tree.rs
crates/kin-vfs-daemon/: Cargo.toml
crates/kin-vfs-daemon/src/: async_kin_provider.rs  auth.rs  error.rs  framing.rs  kin_provider.rs  lib.rs  protocol.rs  routes.rs  server.rs
crates/kin-vfs-fuse/: Cargo.toml
crates/kin-vfs-fuse/src/: filesystem.rs  inode.rs  lib.rs  mount.rs
crates/kin-vfs-nfs/: Cargo.toml
crates/kin-vfs-nfs/src/: automount.rs  lib.rs  nfs_fs.rs  registry.rs  router.rs  server.rs
crates/kin-vfs-shim/: Cargo.toml  build.rs
crates/kin-vfs-shim/src/: client.rs  fd_table.rs  intercept.rs  lib.rs  macos_interpose.c  protocol.rs  statfill.rs
crates/kin-vfs-shim/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: authority-and-write-notify-contract.md  deployment.md  performance.md  platform-support.md  protocol.md  read-path-analysis.md  release-policy.md  shim-signal-safety-audit.md  troubleshooting.md  write-back-contract.md
docs/security/: shim-reentrancy-and-signal-safety.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: atomic_temp_path.rs  join_at_path.rs  path_within_root.rs  synthetic_inode.rs
scripts/: publish-kinlab-crates.sh
shell/: kin-vfs.bash  kin-vfs.fish  kin-vfs.ps1  kin-vfs.zsh
tests/: CONTRACT_TEST_DESIGN.md  real-daemon-shim-smoke.sh  shim-smoke.sh
tests/conformance/: Cargo.toml
tests/conformance/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: interpose.rs  lib.rs  linux_interpose.rs  nfs_adapter.rs
