# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-vfs-daemon"
description = "VFS daemon: serves files over Unix socket from a ContentProvider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kin-vfs-core = { workspace = true }
serde = { workspace = true }
serde_json = "1"
rmp-serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
parking_lot = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
