# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-vfs-fuse"
description = "FUSE mount mode for kin-vfs: macFUSE/FUSE-T virtual mount backed by ContentProvider"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Troy Fortin <troy@firelock.ai>"]
repository = "https://github.com/firelock-ai/kin-vfs"

[dependencies]
kin-vfs-core = { path = "../kin-vfs-core" }
fuser = "0.15"
libc = "0.2"
thiserror = "2"
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
