# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-vfs-shim"
description = "VFS shim: intercepts file access via LD_PRELOAD (Linux), DYLD (macOS), or ProjFS (Windows)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# The macOS interposition table is built from C (build.rs / src/macos_interpose.c)
# because the `__interpose` replacee entries must bind to real libSystem symbols,
# which a pure-Rust table cannot express (the shim defines the libc hook names
# itself). The `cc` crate must be an unconditional build-dependency so that
# build.rs compiles on non-macOS hosts even though the cc::Build call is
# runtime-gated to macOS (CARGO_CFG_TARGET_OS). No-op on other platforms.
[build-dependencies]
cc = "1"

[dependencies]
libc = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
kin-vfs-core = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_ProjectedFileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
